primitives_library_ffi/primitives_library/primitives.h

int sum(int a, int b);
int subtract(int *a, int b);
int *multiply(int a, int b);
int multi_sum(int nr_count. ...);